# fileChecker

./: LICENSE  README.md  fileChecker.cabal
src/: Main.hs
