name:                fileChecker
version:             0.1.0.0
synopsis:            Checks the MIME type of multiple files using libmagic.  
description:         Please see README.md
homepage:            http://github.com/githubuser/fileChecker#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Williams
maintainer:          steven.m.williams@yandex.com
copyright:           2015 Steven Williams
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable fileChecker
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , magic
                     , MissingH
                     , optparse-applicative
